Used constants instead of strings